# clipBo

./: .env.example  .gitignore  CHANGELOG.md  README.md  ai_runtime.py  brain.md  build_linux.sh  build_windows.bat  kodaukovui.spec  linux_build.md  main.py  platform_adapter.py  popup_ui.py  qa_ui_test.py  readme.md  requirements-linux.txt  roi_capture.py  run.sh  run_windows.bat  test.sh  test_platform_adapter.py  test_roi_capture.py  test_tk.py  webview_host.py  windows_build.md
webui/: package-lock.json  package.json
webui/src/: App.tsx  desktop-api.ts  i18n.ts  index.css  markdown.ts  types.ts
webui/src-tauri/: Cargo.toml  tauri.conf.json
webui/src-tauri/src/: actions.rs  ai.rs  commands.rs  launcher.rs  lib.rs  main.rs  native.rs  runtime.rs  settings.rs  windowing.rs
webui/src-tauri/src/platform/: mod.rs
webui/src/pages/: Ask.tsx  Chat.tsx  ImageSource.tsx  Popup.tsx  Response.tsx  Settings.tsx
