[package]
name = "kodaukovui"
version = "0.1.0"
description = "KoDauKoVui desktop shell"
authors = ["KoDauKoVui"]
edition = "2021"

[lib]
name = "kodaukovui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kodaukovui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
